Rerun every demo on upstream develop; drop the JDK 21 preview constraint
66 of 66 checks green on develop at 8d592d6 -- 22 demos, each compiled and run both
ways, on an RTX 5070 Ti at sm_120. The same demos on the released 6.0.0 profile
from the same machine: 48 passed, 0 failed, 6 skipped. That second run is the
honest control -- it isolates the TornadoVM variable by holding GPU, driver and OS
fixed, and it is also the acceptance test for the profile selector.

The material change for demos 19-22: they no longer need --release 21
--enable-preview, JDK 21, or a feature-branch SDK. PR #1083 is merged, so develop
is a jdk22plus build and all four compile with plain javac and run on JDK 25. Their
READMEs said otherwise; verified and corrected. No demo's .java was touched.

The regression report states plainly that the comparison against batches 33/34 is
not single-variable -- different TornadoVM, GPU, driver, toolkit and OS, and a
different machine -- so it covers correctness only. Demo 22's recorded kernel times
were measured on the 4090 and are left alone.

Demos 09 and 10 stay BLOCKED_ENVIRONMENT with the reason recorded: Track B, pinned
to the earlier 5.2.1 build, needing multi-GB GGUF models. Not attempted rather than
silently skipped.

One pre-existing defect is reported rather than quietly fixed:
demos/22-matmul-ladder-fp16-tile/ has no hand-written CUDA twin while every other
demo does, so scripts/verify.sh reports 20 passed, 1 failed. Confirmed against
pristine origin/main -- it predates this batch. Writing a faithful twin for a
six-rung ladder is the demo author's call.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>